# data-serialization-postgresql

./: README.md  data-serialization-postgresql.cabal
src/Data/Serialization/: Postgresql.hs
src/Data/Serialization/Postgresql/: Types.hs
