name:                data-serialization-postgresql
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://github.com/mvoidex/data-serialization-postgresql
license:             BSD3
license-file:        LICENSE
author:              Alexandr `Voidex` Ruchkin
maintainer:          voidex@live.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs: src
  exposed-modules:
    Data.Serialization.Postgresql
  other-modules:
  build-depends:
    base >= 4.5 && < 6
